Fix contrast on pre/code elements in dark mode (#365)

--- a/poucave/html/css/main-dark.css
+++ b/poucave/html/css/main-dark.css
@@ -17,14 +17,13 @@
         border-color: rgba(123, 126, 136, 0.24);
     }
 
-    .auto-theme-dark .check-details pre {
-        background: rgba(123, 126, 136, 0.24);
+    .auto-theme-dark .check-details pre,
+    .auto-theme-dark code {
+        background: rgba(0, 5, 15, 0.24);
         color: var(--gray);
     }
 
     .auto-theme-dark code {
-        background: rgba(123, 126, 136, 0.24);
         border-color: rgba(123, 126, 136, 0.24);
-        color: var(--gray);
     }
 }
